--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,1 @@
-mongodb+srv://projectback:Pailines123.@transporte.yfvxx.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+mongodb+srv://pailines:Pailines123.@clustertransporte.u6mxx.mongodb.net/transportecarga?retryWrites=true&w=majority
