correccion del aplicationPropertis

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-mongodb+srv://pailines:Pailines123.@clustertransporte.u6mxx.mongodb.net/transportecarga?retryWrites=true&w=majority
+
+
+spring.data.mongodb.uri=mongodb+srv://pailines:Pailines123.@clustertransporte.u6mxx.mongodb.net/transportecarga?retryWrites=true&w=majority
