--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-//spring.data.mongodb.uri=mongodb+srv://pailines:Pailines123.@clustertransporte.u6mxx.mongodb.net/transportecarga?retryWrites=true&w=majority
-spring.data.mongodb.uri=mongodb+srv://pailines:Pailines123.@clusterprueba.lohkg.mongodb.net/prueba?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://pailines:Pailines123.@clustertransporte.u6mxx.mongodb.net/transportecarga?retryWrites=true&w=majority
+//spring.data.mongodb.uri=mongodb+srv://pailines:Pailines123.@clusterprueba.lohkg.mongodb.net/prueba?retryWrites=true&w=majority
