correccion en el POM

--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>co.com.sofka.app</groupId>
-	<artifactId>FerreteriaDonRaul</artifactId>
+	<artifactId>TransporteCargaBack</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>FerreteriaDonRaul</name>
+	<name>TransporteCargaBack</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
